fixed margin on mobile

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ width: 100%;
 
 @media screen and (max-width: 768px){
     body{
-        margin: 100px;
+        margin: 50px;
         margin-top: 24px;
     }
 
